# TaekWondo-School

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  tkd.db
app/content/models/: content.py
app/graduation/models/: graduacao.py
core/: settings.py
core/db/: create_db.py  engine.py  models.py
core/repository/: session.py
